Added pictures and text

--- a/bioAbout.html
+++ b/bioAbout.html
@@ -13,8 +13,14 @@
 </head>
 <div class="containerAbout">
     <div id="item1About">1</div>
-    <div id="mainAbout"><h1>WHO IS</h1><h1>KENADII WILLIAMS</h1></div>
-    <div id="item2About">2</div>
+    <div id="mainAbout">
+        <h1>WHO IS<br />KENADII WILLIAMS</h1>
+        <div class="section">
+            <p>Kenadii Williams is a force to be reckoned with. Soon, the world will know who she is, but for now, she is building a solid foundation wrapping up nursing school, serving at her church and honing her craft: makeup. "Honing her craft" is no simple thing. This one phrase encompasses many activities, ranging from watching videos on YouTube and TikTok to stay updated on new-and-improved techniques, researching the best products for her clientele, marketing herself and her business, growing her social media accounts, cultivating relationships with clients, both new and old, and a lot more! She does all this while still finding time to read books, mentor young girls, and even occasionally travel!</p>
+            <p>For Kenadii, makeup is more than just eyeshadow and lipstick. She views the craft holistically, acknowledging that even though it is something she naturally enjoys, it has a bigger purpose. She’s quoted saying, “I love makeup because of what it does for people. I believe it enhances how they feel about themselves and the way they perceive the beauty they already have”. It is because of this that she named her makeup business, “Sparkle”. One could safely assume Kenadii values the person under the makeup, and that's the essence of what makes this line of work so enjoyable for her. She’s currently accepting bookings through her website, which can be found by going to her Instagram (@ikenandwill) and clicking the link in her bio. You can also email her at kenadii422@gmail.com</p>
+        </div>
+    </div>
+    <div id="item2About"><img src="images/KenadiiPortrait.jpg"  alt="A portrait of Kenadii Williams" style="width:100%"></div>
     <div id="item3About">3</div>
 </div>
 <footer>
