--- a/bioLanding.html
+++ b/bioLanding.html
@@ -13,12 +13,27 @@
 </head>
 <!--<body>-->
     <div class="container">
-        <div id="main">Main</div>
-        <div id="item1">1</div>
+        <div id="main"><h1>Kenadii<br />Williams</h1>
+            <h2 style="text-decoration: underline;">Becoming a Mogul</h2>
+        </div>
+        <div id="item1">
+            <figure>
+                <img src="images/kenadiiordained.jpg" alt="Kenadii being ordained at her church" style="width: 35%">
+                <figcaption>In 2022, Kenadii's church ordained her as a Chief Intercessor (A.K.A. a person who prays for others often)</figcaption>
+            </figure>
+        </div>
         <div id="item2">2</div>
-        <div id="item3">3</div>  
+        <div id="item3">
+            <figure>
+                <img src="images/kenadiinurse.png" alt="Kenadii in her nursing scrubs" style="width: 60%">
+                <figcaption>The grind is real! Kenadii pictured here in her nursing school scrub</figcaption>
+            </figure>
+        </div>  
         <div id="longitem">long item</div>
-        <div id="item4">4</div>
+        <div id="item4"><figure>
+            <img src="images/kenadiimakeup.jpg" alt="Kenadii doing makeup" style="width: 60%">
+            <figcaption>Kenadii concentrated as she does a client's makeup</figcaption>
+        </figure></div>
         <div id="item5">5</div>
     </div>
 <!--<footer>
