Changed Landing Page to index file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="item5">5</div>
     </div>
 <!--<footer>
-    <a href="../bioLanding.html" style="float:right;font-weight: 400;padding-right: 10px;font-style:italic">back</a>
+    <a href="../index.html" style="float:right;font-weight: 400;padding-right: 10px;font-style:italic">back</a>
 </footer>
 </body>-->
 <footer>
