Made photo files case-sensitive and added navigation links

--- a/index.html
+++ b/index.html
@@ -15,23 +15,28 @@
     <div class="container">
         <div id="main"><h1>Kenadii<br />Williams</h1>
             <h2 style="text-decoration: underline;">Becoming a Mogul</h2>
+            <hr>
+            <ul>
+                <li><a href="bioAbout.html">About Kenadii Williams</a></li>
+                <li><a href="bioHobbies.html">Kenadii's Hobbies</a></li>
+            </ul>
         </div>
         <div id="item1">
             <figure>
-                <img src="images/kenadiiordained.jpg" alt="Kenadii being ordained at her church" style="width: 35%">
+                <img src="images/KenadiiOrdained.jpg" alt="Kenadii being ordained at her church" style="width: 35%">
                 <figcaption>In 2022, Kenadii's church ordained her as a Chief Intercessor (A.K.A. a person who prays for others often)</figcaption>
             </figure>
         </div>
         <div id="item2">2</div>
         <div id="item3">
             <figure>
-                <img src="images/kenadiinurse.png" alt="Kenadii in her nursing scrubs" style="width: 60%">
+                <img src="images/KenadiiNurse.png" alt="Kenadii in her nursing scrubs" style="width: 60%">
                 <figcaption>The grind is real! Kenadii pictured here in her nursing school scrub</figcaption>
             </figure>
         </div>  
         <div id="longitem">long item</div>
         <div id="item4"><figure>
-            <img src="images/kenadiimakeup.jpg" alt="Kenadii doing makeup" style="width: 60%">
+            <img src="images/KenadiiMakeup.jpg" alt="Kenadii doing makeup" style="width: 60%">
             <figcaption>Kenadii concentrated as she does a client's makeup</figcaption>
         </figure></div>
         <div id="item5">5</div>
