--- a/bioAbout.html
+++ b/bioAbout.html
@@ -24,7 +24,7 @@
     <div id="item3About">3</div>
 </div>
 <footer>
-    <a href="../index.html" style="float:right;font-weight: 400;padding-right: 10px;font-style:italic">back</a>
+    <a href="../bioSite/index.html" style="float:right;font-weight: 400;padding-right: 10px;font-style:italic">back</a>
     <a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
