--- a/bioHobbies.html
+++ b/bioHobbies.html
@@ -15,31 +15,32 @@
     <div id="item1Hobbies">
         <h2>Eating</h2>
         <figure>
-            <img src="images/kenadiieating.jpg" alt="Kenadii about to take a bite" style="width:100%">
+            <img src="images/KenadiiEating.jpg" alt="Kenadii about to take a bite" style="width:100%">
             <figcaption>Trying out a new, upscale restaurant in downtown Lexington. The flowers were edible!</figcaption>
         </figure>
     </div>
     <div id="item2Hobbies">
         <h2>Hiking</h2>
         <figure>
-            <img src="images/kenadiihike.jpg" alt="Kenadii standing at the top of a mountain" style="width:100%">
+            <img src="images/KenadiiHike.jpg" alt="Kenadii standing at the top of a mountain" style="width:100%">
             <figcaption>Kenadii taking a well-deserved rest after a 2 hour climb in Berea, Kentucky.</figcaption>
         </figure>
     </div>
     <div id="item3Hobbies">
         <h2 style="color:#F3F2EF">Travel</h2>
         <figure>
-            <img src="images/kenadiitravel.jpg" alt="Kenadii dancing with a partner" style="width:100%">
+            <img src="images/KenadiiTravel.jpg" alt="Kenadii dancing with a partner" style="width:100%">
             <figcaption>Kenadii (right) dancing in Tanzania</figcaption>
         </figure>
     </div>  
 </div>
 <footer>
-    <a href="../index.html" style="float:right;font-weight: 400;padding-right: 10px;font-style:italic">back</a>
+    <a href="../bioSite/index.html" style="font-weight: 400;padding-right: 10px;font-style:italic">back</a>
     <!--<a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
             alt="Valid CSS!" />
     </a>-->
+    
 </footer>
 </html>
