--- a/bioHobbies.html
+++ b/bioHobbies.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto+Condensed:wght@300&family=Viga&display=swap" rel="stylesheet">
     
-    <link href="bioSite.css" type="text/css" rel ="stylesheet" />
+    <link href="bioSite.css" type="text/css" rel="stylesheet" />
 </head>
 <div class="containerHobbies">
     <div id="item1Hobbies">
         <h2>Eating</h2>
         <figure>
-            <img src="images/KenadiiEating.jpg" alt="Kenadii about to take a bite" style="width:100%">
+            <img src="images/KenadiiEating.jpg" alt="Kenadii about to take a bite" style="width:100%; max-height: 500px;">
             <figcaption>Trying out a new, upscale restaurant in downtown Lexington. The flowers were edible!</figcaption>
         </figure>
     </div>
@@ -35,7 +35,7 @@
     </div>  
 </div>
 <footer>
-    <a href="../bioSite/index.html" style="font-weight: 400;padding-right: 10px;font-style:italic">back</a>
+    <a href="../bioSite/index.html" class="button" type="button" style="font-weight: 400;padding-right: 10px;font-style:italic">back</a>-->
     <!--<a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
