--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto+Condensed:wght@300&family=Viga&display=swap" rel="stylesheet">
     
-    <link href="bioSite.css" type="text/css" rel ="stylesheet" />
+    <link href="bioSite.css" type="text/css" rel="stylesheet" />
 </head>
 <!--<body>-->
     <div class="container">
         <div id="main"><h1>Kenadii<br />Williams</h1>
-            <h2 style="text-decoration: underline;">Becoming a Mogul</h2>
+            <h2 style="text-align: left;padding-left: 50px; color: #833e8c; text-decoration: none;">Becoming a Mogul</h2>
             <hr>
             <ul>
                 <li><a href="bioAbout.html">About Kenadii Williams</a></li>
@@ -27,14 +27,14 @@
                 <figcaption>In 2022, Kenadii's church ordained her as a Chief Intercessor (A.K.A. a person who prays for others often)</figcaption>
             </figure>
         </div>
-        <div id="item2">2</div>
+        <div id="item2"></div>
         <div id="item3">
             <figure>
                 <img src="images/KenadiiNurse.png" alt="Kenadii in her nursing scrubs" style="width: 60%">
                 <figcaption>The grind is real! Kenadii pictured here in her nursing school scrub</figcaption>
             </figure>
         </div>  
-        <div id="longitem">long item</div>
+        <div id="longitem"></div>
         <div id="item4"><figure>
             <img src="images/KenadiiMakeup.jpg" alt="Kenadii doing makeup" style="width: 60%">
             <figcaption>Kenadii concentrated as she does a client's makeup</figcaption>
