--- a/bioAbout.html
+++ b/bioAbout.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto+Condensed:wght@300&family=Viga&display=swap" rel="stylesheet">
     
-    <link href="bioSite.css" type="text/css" rel ="stylesheet" />
+    <link href="bioSite.css" type="text/css" rel="stylesheet" />
 </head>
 <div class="containerAbout">
     <div id="item1About">1</div>
@@ -21,10 +21,10 @@
         </div>
     </div>
     <div id="item2About"><img src="images/KenadiiPortrait.jpg"  alt="A portrait of Kenadii Williams" style="width:100%"></div>
-    <div id="item3About">3</div>
+    <div id="item3About"></div>
 </div>
 <footer>
-    <a href="../bioSite/index.html" style="float:right;font-weight: 400;padding-right: 10px;font-style:italic">back</a>
+    <a href="../bioSite/index.html" class="button" type="button" style="float:right;font-weight: 400;padding-right: 10px;font-style:italic">back</a>
     <a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
